--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "fix": "eslint --fix .",
     "build": "node ./src/index.js"
   },
-  "author": "",
+  "author": "Andre Ponce",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
