--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "fix": "eslint --fix .",
-    "build": "node ./src/index.js"
+    "start": "node ./src/index.js"
   },
   "author": "Andre Ponce",
   "license": "ISC",
