--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
   "author": "Andre Ponce",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "http": "^0.0.1-security",
-    "mongoose": "^7.4.0",
-    "mongoose-unique-validator": "^4.0.0",
-    "nodemon": "^3.0.1",
-    "socket.io": "^4.7.1"
+    "dotenv": "16.3.1",
+    "express": "4.18.2",
+    "http": "0.0.1-security",
+    "mongoose": "7.4.0",
+    "mongoose-unique-validator": "4.0.0",
+    "nodemon": "3.0.1",
+    "socket.io": "4.7.1"
   },
   "devDependencies": {
-    "eslint": "^8.45.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^16.0.1",
-    "eslint-plugin-promise": "^6.1.1"
+    "eslint": "8.45.0",
+    "eslint-config-standard": "17.1.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-n": "16.0.1",
+    "eslint-plugin-promise": "6.1.1"
   }
 }
